JS_onClick_onKeypress

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         
         <audio id="boom" src="assets/sound/boom.wav"></audio>    
         <audio id="clap" src="assets/sound/clap.wav"></audio>  
-        <audio id="hihat" src="assets/sound/clap.wav"></audio> 
-        <audio id="kick" src="assets/sound/clap.wav"></audio> 
-        <audio id="openhat" src="assets/sound/clap.wav"></audio> 
-        <audio id="ride" src="assets/sound/clap.wav"></audio> 
-        <audio id="snare" src="assets/sound/clap.wav"></audio> 
-        <audio id="tink" src="assets/sound/clap.wav"></audio> 
-        <audio id="tom" src="assets/sound/clap.wav"></audio> 
+        <audio id="hihat" src="assets/sound/hihat.wav"></audio> 
+        <audio id="kick" src="assets/sound/kick.wav"></audio> 
+        <audio id="openhat" src="assets/sound/openhat.wav"></audio> 
+        <audio id="ride" src="assets/sound/ride.wav"></audio> 
+        <audio id="snare" src="assets/sound/snare.wav"></audio> 
+        <audio id="tink" src="assets/sound/tink.wav"></audio> 
+        <audio id="tom" src="assets/sound/tom.wav"></audio> 
 </body>
 </html>
